Changes on notebook

--- a/Semana 4/S4TC1_Tokenizacion.ipynb
+++ b/Semana 4/S4TC1_Tokenizacion.ipynb
@@ -536,7 +536,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "En esta gráfica podemos revisar la comparación de los MSE con cada algorítmo de transformación de texto. Estos algoritmos junto con el modelado de un XGBoostRegressor nos permitió analizar si los comentarios eran tóxicos o no, obtuvimos que los 3 modelos generaban un overfitting  prediciendo un alto porcentaje de los comentarios, de los cuales podríamos modelar algunas características para evitar ese overfitting y que nos genere un modelo más ajustado a la realidad, revisando caracterísiticas sintácticas, o lenguaje usado en los mismos, si se pudo generar ambigüedad en el modelado.\n",
+    "\n",
+    "En conclusión de los 3 modelos, obtuvimos una mejor predicción gracias al algoritmo de TF-IDF el cual nos permitió que la predicción del target fuese mucho mejor que los otros dos modelos.\n",
+    "Podríamos verificar si estos valores tan bajos del MSE son ajustados a la realidad, esto con un conjunto de datos adicional donde se pueda corroborar la calidad de nuestro modelo."
+   ]
   }
  ],
  "metadata": {
