--- a/Semana 2/S2TC1_RandomForests_Boosting.ipynb
+++ b/Semana 2/S2TC1_RandomForests_Boosting.ipynb
@@ -94,7 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Celda 1\n"
+    "# Celda 1\n",
+    "\n",
+    "\n"
    ]
   },
   {
